--- a/app/styles/main.less
+++ b/app/styles/main.less
@@ -1,27 +1,7 @@
-body {
-	background-color: whitesmoke;
-	font-family: Helvetica, Arial, sans-serif;
-}
+@import "colors.less";
+@import "fonts.less";
+@import "global.less";
 
-aside {
-	position: fixed;
-	overflow-y: auto;
-	top: 0;
-	left: 0;
-	bottom: 0;
-	margin: 20px;
-	padding: 20px 30px;
-	width: 300px;
-	background-color: #f4faff;
-	color: rgb(86, 86, 90);
-
-	section {
-		margin: 0 auto;
-		padding: 12px 0;
-		box-sizing: border-box;
-		transition: all 300ms ease-out;
-	}
-}
 
 article {
 	padding-top: 20vh;
