Begin styling toolbar groups, title and labels

--- a/app/styles/fonts.less
+++ b/app/styles/fonts.less
@@ -43,10 +43,12 @@ body { #font-face('Wigrum', 'wigrum-light', 300); }
 	font-weight: 300;
 }
 
-.font-interitle {
+.font--intertitle {
 	font-family: Wigrum;
 	font-size: @font-short;
 	line-height: @line-height-tightest;
 	font-weight: 300;
 	text-transform: uppercase;
+	letter-spacing: 1px;
+	-webkit-font-smoothing: auto;
 }
