--- a/app/styles/main.less
+++ b/app/styles/main.less
@@ -83,20 +83,14 @@ img {
 	width: 100%;
 }
 
-label {
-	display: block;
-	text-transform: uppercase;
-	font-size: 9px;
-	letter-spacing: 1px;
-	margin: 16px 0;
-	color: #4882ff;
-	position: relative;
+// label {
+// 	position: relative;
 
-	input[type="range"], select, option {
-		display: block;
-		width: 100%;
-		margin-top: 4px;
-		-webkit-appearance: none;
-		appearance: none;
-	}
-}
+// 	input[type="range"], select, option {
+// 		display: block;
+// 		width: 100%;
+// 		margin-top: 4px;
+// 		-webkit-appearance: none;
+// 		appearance: none;
+// 	}
+// }
