Finish styling input range

--- a/app/styles/main.less
+++ b/app/styles/main.less
@@ -1,6 +1,7 @@
 @import "colors.less";
 @import "fonts.less";
 @import "global.less";
+@import "toolbar.less";
 
 
 article {
@@ -82,15 +83,3 @@ img {
 	display: block;
 	width: 100%;
 }
-
-// label {
-// 	position: relative;
-
-// 	input[type="range"], select, option {
-// 		display: block;
-// 		width: 100%;
-// 		margin-top: 4px;
-// 		-webkit-appearance: none;
-// 		appearance: none;
-// 	}
-// }
