--- a/app/styles/global.less
+++ b/app/styles/global.less
@@ -12,125 +12,33 @@ button {
 	}
 }
 
-// Toolbar
-.toolbar-zone {
-	position: fixed;
-	top: 0;
-	left: 0;
-	bottom: 0;
-	width: 400px;
-
-	.toolbar-ctn {
-		color: @black;
-		background-color: white;
-		border: 1px solid @border;
-		border-radius: 5px;
-		overflow: hidden;
-		box-shadow: 0px 8px 40px rgba(0,0,0,0.2);
-		width: 320px;
-		position: absolute;
-		bottom: 0;
-		top: 0;
-		box-sizing: border-box;
-		margin: 40px;
-		display: flex;
-		flex-direction: column;
+input[type=number],
+input[type=text] {
+	-webkit-appearance: none;
+	border: 0;
+	background-color: transparent;
+	&:focus {
+		outline:0;
 	}
+}
 
-	.toolbar-tabs {
-		width: 100%;
-		border-bottom: 1px solid @border;
-		position: relative;
-
-		&:before,
-		&:after {
-			content:'';
-			position: absolute;
-			top: 0;
-			bottom: 0;
-			width: 40px;
-			pointer-events: none;
-		}
-		&:before {
-			left:0;
-			background-image: linear-gradient(90deg, white, transparent);
-		}
-		&:after {
-			right:0;
-			background-image: linear-gradient(-90deg, white, transparent);
-		}
-
-		.toolbar-scroll {
-			width: 100%;
-			max-width: 100%;
-			overflow: auto;
-			display: flex;
-			-webkit-overflow-scrolling: touch;
-		}
-
-		.toolbar-tabs-wrapper {
-			padding: 0 15px;
-			display: flex;
-			flex-shrink: 0;
-		}
-
-		button {
-			display: block;
-			flex-shrink: 0;
-			white-space: nowrap;
-			padding: 18px 0 15px 0;
-			margin: 0 15px;
-			cursor: pointer;
-			.font--button;
-
-			color: @border;
-			border-top: 2px solid transparent;
-			border-bottom: 2px solid transparent;
-			transition: 200ms ease-out;
-			transition-property: color, border-color;
-			&.is-active {
-				border-bottom-color: @accent;
-				color: @accent;
-				transition-duration: 75ms;
-			}
-			&:hover {
-				color: @accent;
-				transition-duration: 75ms;
-			}
-		}
-	}
-
-	.toolbar-content {
-		flex-grow: 1;
-		position: relative;
-
-		.toolbar-tab-content {
-			position: absolute;
-			top:0;left:0;right:0;bottom:0;
-			overflow:auto;
-			visibility: hidden;
-			opacity: 0;
-			transition: visibility 750ms, opacity 750ms ease-out;
-			&.is-active {
-				opacity: 1;
-				visibility: visible;
-				transition: visibility 0ms, opacity 200ms ease-out;
-			}
-		}
-	}
-
-	.toolbar-group {
-		padding: 24px 30px 30px;
-		border-bottom: 1px solid @border;
-
-		.toolbar-group-title {
-			.font--title;
-			margin: 0;
-			margin-bottom: 18px;
-		}
-		.toolbar-option-label {
-			.font--intertitle;
-			margin-bottom: 4px;
-		}
-	}
+// Input range reset by Daniel Stern for CSS-TRICKS
+// https://css-tricks.com/styling-cross-browser-compatible-range-inputs-css/
+input[type=range] {
+	-webkit-appearance: none;
+	width: 100%;
+	background: transparent;
+}
+input[type=range]::-webkit-slider-thumb {
+	-webkit-appearance: none;
+}
+input[type=range]:focus {
+	outline: none;
+}
+input[type=range]::-ms-track {
+	width: 100%;
+	cursor: pointer;
+	background: transparent;
+	border-color: transparent;
+	color: transparent;
 }
