--- a/app/styles/global.less
+++ b/app/styles/global.less
@@ -13,7 +13,8 @@ button {
 }
 
 input[type=number],
-input[type=text] {
+input[type=text],
+select {
 	-webkit-appearance: none;
 	border: 0;
 	background-color: transparent;
