Style input font upload

--- a/app/styles/fonts.less
+++ b/app/styles/fonts.less
@@ -43,6 +43,13 @@ body { #font-face('Wigrum', 'wigrum-light', 300); }
 	font-weight: 300;
 }
 
+.font--text-small {
+	font-family: Wigrum;
+	font-size: @font-short;
+	line-height: @line-height-tightest;
+	font-weight: 300;
+}
+
 .font--intertitle {
 	font-family: Wigrum;
 	font-size: @font-short;
