Add error handling for save button

--- a/app/styles/toolbar.less
+++ b/app/styles/toolbar.less
@@ -169,4 +169,16 @@
 			.font--intertitle;
 		}
 	}
+
+	.toolbar-buttons {
+		height: 55px;
+		display: flex;
+		.button-save {
+			.font--text;
+			font-weight: 600;
+			width: 100%;
+			background-color: @accent;
+			color: white;
+		}
+	}
 }
