Add hover effect and success/error messages to buttonSave

--- a/app/styles/colors.less
+++ b/app/styles/colors.less
@@ -10,5 +10,8 @@
 // Semantics
 @black: @grey;
 @accent: @blue;
+@accent-darker: #1048a3;
 @background: @grey-lightest;
 @border: @grey-lighter;
+@success: #2ac46f;
+@error: #e43535;
