--- a/app/styles/main.less
+++ b/app/styles/main.less
@@ -9,6 +9,7 @@ article {
 	min-height: 100vh;
 	background-color: white;
 	margin: 0 auto;
+	margin-left: 320px;
 
 	* {
 		transition: all 300ms ease-out;
