--- a/app/styles/toolbar.less
+++ b/app/styles/toolbar.less
@@ -7,68 +7,43 @@
 	top: 0;
 	left: 0;
 	bottom: 0;
-	width: 80px;
-	transition: width 400ms ease-out 300ms;
+	width: 320px;
 
-	&:before {
-		content:'';
-		position: absolute;
-		top:0;bottom:0;left:0;right:0;
-		border-right: 1px solid @border;
-		transition: border-color 200ms ease-out 300ms;
-	}
-	&:after {
-		content: 'DISPLAY TOOLBAR';
-		.font--text;
-		white-space: nowrap;
-		color: @accent;
-		position: absolute;
-		top: 50%;
-		left: 50%;
-		transform: translate(-50%,-50%) rotate(-90deg);
-		transition: opacity 200ms ease-out 400ms;
-	}
+	// &:before {
+	// 	content:'';
+	// 	position: absolute;
+	// 	top:0;bottom:0;left:0;right:0;
+	// 	border-right: 1px solid @border;
+	// 	transition: border-color 200ms ease-out 300ms;
+	// }
+	// &:after {
+	// 	content: 'DISPLAY TOOLBAR';
+	// 	.font--text;
+	// 	white-space: nowrap;
+	// 	color: @accent;
+	// 	position: absolute;
+	// 	top: 50%;
+	// 	left: 50%;
+	// 	transform: translate(-50%,-50%) rotate(-90deg);
+	// 	transition: opacity 200ms ease-out 400ms;
+	// }
 
 	.toolbar-ctn {
 		z-index: 1;
 		color: @black;
 		background-color: white;
-		border: 1px solid @border;
-		border-radius: 5px;
+		border-right: 1px solid @border;
 		overflow: hidden;
 		box-shadow: 0px 8px 40px rgba(0,0,0,0.2);
-		width: 320px;
+		width: 100%;
 		position: absolute;
 		bottom: 0;
 		top: 0;
 		box-sizing: border-box;
-		margin: 40px;
 		display: flex;
 		flex-direction: column;
-
-		transform: translateX(-100px);
-		opacity: 0;
-		transition: 200ms ease-out 300ms;
-		transition-property: transform, opacity;
 	}
 
-	// &:hover {
-		width: 400px;
-		transition-delay: 0ms;
-		.toolbar-ctn {
-			transform: translateX(0);
-			opacity: 1;
-			transition-delay: 0ms;
-		}
-		&:before {
-			border-color: transparent;
-			transition-delay: 0ms;
-		}
-		&:after {
-			opacity: 0;
-			transition-delay: 0ms;
-		}
-	// }
 
 	.toolbar-tabs {
 		width: 100%;
