Add moduleList to save feature

--- a/app/styles/modules/modules.less
+++ b/app/styles/modules/modules.less
@@ -11,6 +11,7 @@
 	&.option--width-extra-small {
 		// Used to align module inside
 		.recipe--width-site; 
+		.recipe--alignment-center;
 	}
 	&.option--width-extra-big > * { .recipe--width-extra-big; }
 	&.option--width-big > * { .recipe--width-big; }
