--- a/app/styles/toolbar.less
+++ b/app/styles/toolbar.less
@@ -1,6 +1,8 @@
 @import "inputRange.less";
 @import "inputFont.less";
 @import "inputDropdown.less";
+@import "inputLine.less";
+@import "inputTextarea.less";
 
 // Toolbar
 .toolbar-zone {
