Add text alignment recipes

--- a/app/styles/recipes/recipes.less
+++ b/app/styles/recipes/recipes.less
@@ -2,3 +2,4 @@
 @import "recipe-security-padding";
 @import "recipe-vertical-spacing";
 @import "recipe-alignment";
+@import "recipe-text-alignment";
