--- a/app/styles/modules/modules.less
+++ b/app/styles/modules/modules.less
@@ -34,4 +34,8 @@
 	&.option--alignment-left > * { .recipe--alignment-left; }
 	&.option--alignment-center > * { .recipe--alignment-center; }
 	&.option--alignment-right > * { .recipe--alignment-right; }
+	// OPTION: Text Alignment
+	&.option--text-alignment-left > * { .recipe--text-alignment-left; }
+	&.option--text-alignment-center > * { .recipe--text-alignment-center; }
+	&.option--text-alignment-right > * { .recipe--text-alignment-right; }
 }
