--- a/app/styles/recipes/recipe-vertical-spacing.less
+++ b/app/styles/recipes/recipe-vertical-spacing.less
@@ -55,56 +55,56 @@
 }
 // RECIPE: Space after
 .recipe--margin-after-big {
-	margin-top: calc(~'var(--vertical-spacing-big) * 0.6');
+	margin-bottom: calc(~'var(--vertical-spacing-big) * 0.6');
 	#mq-min-width(@screen-xs, {
-		margin-top: calc(~'var(--vertical-spacing-big) * 0.8');
+		margin-bottom: calc(~'var(--vertical-spacing-big) * 0.8');
 	});
 	#mq-min-width(@screen-md, {
-		margin-top: var(--vertical-spacing-big);
+		margin-bottom: var(--vertical-spacing-big);
 	});
 }
 .recipe--margin-after-normal {
-	margin-top: calc(~'var(--vertical-spacing-normal) * 0.6');
+	margin-bottom: calc(~'var(--vertical-spacing-normal) * 0.6');
 	#mq-min-width(@screen-xs, {
-		margin-top: calc(~'var(--vertical-spacing-normal) * 0.8');
+		margin-bottom: calc(~'var(--vertical-spacing-normal) * 0.8');
 	});
 	#mq-min-width(@screen-md, {
-		margin-top: var(--vertical-spacing-normal);
+		margin-bottom: var(--vertical-spacing-normal);
 	});
 }
 .recipe--margin-after-small {
-	margin-top: calc(~'var(--vertical-spacing-small) * 0.6');
+	margin-bottom: calc(~'var(--vertical-spacing-small) * 0.6');
 	#mq-min-width(@screen-xs, {
-		margin-top: calc(~'var(--vertical-spacing-small) * 0.8');
+		margin-bottom: calc(~'var(--vertical-spacing-small) * 0.8');
 	});
 	#mq-min-width(@screen-md, {
-		margin-top: var(--vertical-spacing-small);
+		margin-bottom: var(--vertical-spacing-small);
 	});
 }
 .recipe--padding-after-big {
-	padding-top: calc(~'var(--vertical-spacing-big) * 0.6');
+	padding-bottom: calc(~'var(--vertical-spacing-big) * 0.6');
 	#mq-min-width(@screen-xs, {
-		padding-top: calc(~'var(--vertical-spacing-big) * 0.8');
+		padding-bottom: calc(~'var(--vertical-spacing-big) * 0.8');
 	});
 	#mq-min-width(@screen-md, {
-		padding-top: var(--vertical-spacing-big);
+		padding-bottom: var(--vertical-spacing-big);
 	});
 }
 .recipe--padding-after-normal {
-	padding-top: calc(~'var(--vertical-spacing-normal) * 0.6');
+	padding-bottom: calc(~'var(--vertical-spacing-normal) * 0.6');
 	#mq-min-width(@screen-xs, {
-		padding-top: calc(~'var(--vertical-spacing-normal) * 0.8');
+		padding-bottom: calc(~'var(--vertical-spacing-normal) * 0.8');
 	});
 	#mq-min-width(@screen-md, {
-		padding-top: var(--vertical-spacing-normal);
+		padding-bottom: var(--vertical-spacing-normal);
 	});
 }
 .recipe--padding-after-small {
-	padding-top: calc(~'var(--vertical-spacing-small) * 0.6');
+	padding-bottom: calc(~'var(--vertical-spacing-small) * 0.6');
 	#mq-min-width(@screen-xs, {
-		padding-top: calc(~'var(--vertical-spacing-small) * 0.8');
+		padding-bottom: calc(~'var(--vertical-spacing-small) * 0.8');
 	});
 	#mq-min-width(@screen-md, {
-		padding-top: var(--vertical-spacing-small);
+		padding-bottom: var(--vertical-spacing-small);
 	});
 }
