Add font recipes and markdown to module text

--- a/app/styles/recipes/recipe-font.less
+++ b/app/styles/recipes/recipe-font.less
@@ -2,6 +2,7 @@
 .recipe--font-title-extra-big {
 	font-family: var(--font-family-title-extra-big);
 	font-size: calc(~'var(--font-size-title-extra-big) * 0.6');
+	line-height: 1.2em;
 	#mq-min-width(@screen-xs, {
 		font-size: calc(~'var(--font-size-title-extra-big) * 0.8');
 	});
@@ -12,6 +13,7 @@
 .recipe--font-title-big {
 	font-family: var(--font-family-title-big);
 	font-size: calc(~'var(--font-size-title-big) * 0.6');
+	line-height: 1.2em;
 	#mq-min-width(@screen-xs, {
 		font-size: calc(~'var(--font-size-title-big) * 0.8');
 	});
@@ -22,6 +24,7 @@
 .recipe--font-title-normal {
 	font-family: var(--font-family-title-normal);
 	font-size: calc(~'var(--font-size-title-normal) * 0.6');
+	line-height: 1.2em;
 	#mq-min-width(@screen-xs, {
 		font-size: calc(~'var(--font-size-title-normal) * 0.8');
 	});
@@ -32,6 +35,7 @@
 .recipe--font-title-small {
 	font-family: var(--font-family-title-small);
 	font-size: calc(~'var(--font-size-title-small) * 0.6');
+	line-height: 1.2em;
 	#mq-min-width(@screen-xs, {
 		font-size: calc(~'var(--font-size-title-small) * 0.8');
 	});
@@ -42,6 +46,7 @@
 .recipe--font-title-extra-small {
 	font-family: var(--font-family-title-extra-small);
 	font-size: calc(~'var(--font-size-title-extra-small) * 0.6');
+	line-height: 1.2em;
 	#mq-min-width(@screen-xs, {
 		font-size: calc(~'var(--font-size-title-extra-small) * 0.8');
 	});
@@ -53,6 +58,7 @@
 .recipe--font-text-big {
 	font-family: var(--font-family-text-big);
 	font-size: calc(~'var(--font-size-text-big) * 0.6');
+	line-height: 1.6em;
 	#mq-min-width(@screen-xs, {
 		font-size: calc(~'var(--font-size-text-big) * 0.8');
 	});
@@ -63,6 +69,7 @@
 .recipe--font-text-normal {
 	font-family: var(--font-family-text-normal);
 	font-size: calc(~'var(--font-size-text-normal) * 0.6');
+	line-height: 1.6em;
 	#mq-min-width(@screen-xs, {
 		font-size: calc(~'var(--font-size-text-normal) * 0.8');
 	});
@@ -73,6 +80,7 @@
 .recipe--font-text-small {
 	font-family: var(--font-family-text-small);
 	font-size: calc(~'var(--font-size-text-small) * 0.6');
+	line-height: 1.6em;
 	#mq-min-width(@screen-xs, {
 		font-size: calc(~'var(--font-size-text-small) * 0.8');
 	});
@@ -84,6 +92,7 @@
 .recipe--font-label-big {
 	font-family: var(--font-family-label-big);
 	font-size: calc(~'var(--font-size-label-big) * 0.6');
+	line-height: 1.1em;
 	#mq-min-width(@screen-xs, {
 		font-size: calc(~'var(--font-size-label-big) * 0.8');
 	});
@@ -94,6 +103,7 @@
 .recipe--font-label-normal {
 	font-family: var(--font-family-label-normal);
 	font-size: calc(~'var(--font-size-label-normal) * 0.6');
+	line-height: 1.1em;
 	#mq-min-width(@screen-xs, {
 		font-size: calc(~'var(--font-size-label-normal) * 0.8');
 	});
@@ -104,6 +114,7 @@
 .recipe--font-label-small {
 	font-family: var(--font-family-label-small);
 	font-size: calc(~'var(--font-size-label-small) * 0.6');
+	line-height: 1.1em;
 	#mq-min-width(@screen-xs, {
 		font-size: calc(~'var(--font-size-label-small) * 0.8');
 	});
