Add module image and default content to module list

--- a/app/styles/inputTextarea.less
+++ b/app/styles/inputTextarea.less
@@ -19,6 +19,7 @@
 			transition: 200ms ease-out;
 			transition-property: border-color, background-color, color, font-weight;
 			max-width: 100%;
+			min-width: 100%;
 			// ~> FOCUS 
 			&:focus {
 				outline: none;
