--- a/app/styles/recipes/recipe-markdown.less
+++ b/app/styles/recipes/recipe-markdown.less
@@ -13,11 +13,11 @@
 	}
 
 	* { .recipe--font-text-big; }
-	h1,h2 { .recipe--font-title-extra-big; }
-	h3 { .recipe--font-title-big; }
-	h4 { .recipe--font-title-normal; }
-	h5 { .recipe--font-title-small; }
-	h6 { .recipe--font-title-extra-small; }
+	h1 { .recipe--font-title-extra-big; }
+	h2 { .recipe--font-title-big; }
+	h3 { .recipe--font-title-normal; }
+	h4 { .recipe--font-title-small; }
+	h5,h6 { .recipe--font-title-extra-small; }
 	small { .recipe--font-text-normal }
 
 	strong { font-weight: 700; }
@@ -125,10 +125,10 @@
 	}
 
 	* { .recipe--font-text-normal; }
-	h1,h2 { .recipe--font-title-big; }
-	h3 { .recipe--font-title-normal; }
-	h4 { .recipe--font-title-small; }
-	h5,h6 { .recipe--font-title-extra-small; }
+	h1 { .recipe--font-title-big; }
+	h2 { .recipe--font-title-normal; }
+	h3 { .recipe--font-title-small; }
+	h4,h5,h6 { .recipe--font-title-extra-small; }
 	small { .recipe--font-text-small }
 
 	strong { font-weight: 700; }
@@ -236,9 +236,9 @@
 	}
 
 	* { .recipe--font-text-small; }
-	h1,h2 { .recipe--font-title-normal; }
-	h3 { .recipe--font-title-small; }
-	h4,h5,h6 { .recipe--font-title-extra-small; }
+	h1 { .recipe--font-title-normal; }
+	h2 { .recipe--font-title-small; }
+	h3,h4,h5,h6 { .recipe--font-title-extra-small; }
 	small { .recipe--font-text-small }
 
 	strong { font-weight: 700; }
