Fix after pointer events

--- a/app/styles/inputFont.less
+++ b/app/styles/inputFont.less
@@ -26,6 +26,7 @@
 			position: absolute;
 			top:50%; right:10px;
 			transform: translateY(-50%);
+			pointer-events: none;
 		}
 		// ~> HOVER
 		&:hover {
