--- a/app/styles/recipes/recipe-width.less
+++ b/app/styles/recipes/recipe-width.less
@@ -5,4 +5,4 @@
 .recipe--width-big { max-width: var(--width-wide); }
 .recipe--width-normal { max-width: var(--width-current); }
 .recipe--width-small { max-width: var(--width-narrow); }
-.recipe--width-extra-small { max-width: var(--width-narrow); }
+.recipe--width-extra-small { max-width: var(--width-extra-narrow); }
