--- a/app/styles/main.less
+++ b/app/styles/main.less
@@ -6,6 +6,7 @@
 @import "modules/modules";
 @import "global";
 @import "toolbar";
+@import "guides";
 
 figure {
 	margin: 0;
@@ -16,6 +17,7 @@ article {
 	background-color: white;
 	margin: 0 auto;
 	margin-left: 320px;
+	position: relative;
 
 	* {
 		transition: all 300ms ease-out;
