Fix guide dimensions

--- a/app/styles/guides.less
+++ b/app/styles/guides.less
@@ -4,6 +4,8 @@
 	top:0; left: 320px; bottom:0; right:0;
 
 	.guides-width {
+		max-width: var(--width-site);
+		margin: 0 auto;
 		height: 100%;
 		box-sizing: border-box;
 		.recipe--security-padding-big;
@@ -43,6 +45,8 @@
 	}
 
 	.guides-gutter {
+		max-width: var(--width-site);
+		margin: 0 auto;
 		position: absolute;
 		top:0; bottom:0; left:0; right:0;
 		box-sizing: border-box;
