--- a/app/styles/fonts.less
+++ b/app/styles/fonts.less
@@ -13,12 +13,21 @@
 
 @line-height-tightest: 1.1em;
 
+@font-tallest: 30px;
 @font-taller: 21px;
 @font-tall: 16px;
 @font-current: 14px;
 @font-short: 9px;
 
 // Recipes
+.font--title-big {
+	// font-family: Wigrum;
+	font-family: Helvetica, Arial;
+	font-size: @font-tallest;
+	line-height: @line-height-tightest;
+	font-weight: 300;
+}
+
 .font--title {
 	// font-family: Wigrum;
 	font-family: Helvetica, Arial;
