Style toolbar lists and list items

--- a/app/styles/toolbar.less
+++ b/app/styles/toolbar.less
@@ -119,7 +119,8 @@
 		.toolbar-tab-content {
 			position: absolute;
 			top:0;left:0;right:0;bottom:0;
-			overflow:auto;
+			overflow-y: auto;
+			overflow-x: hidden;
 			// ~> HIDDEN
 			visibility: hidden;
 			opacity: 0;
@@ -204,9 +205,6 @@
 			min-height: 60px;
 			text-align: center;
 			background-color: @background;
-		}
-		.options-ctn {
-			padding: 24px 30px 6px 30px;
 		}
 	}
 
