Big refactor of modules and items

--- a/src/styles/modules/module-markdown.less
+++ b/src/styles/modules/module-markdown.less
@@ -1,4 +1,4 @@
-.module-text {
+.module-markdown {
 	&.option--text-style-big { .recipe--markdown-big; }
 	&.option--text-style-normal { .recipe--markdown-normal; }
 	&.option--text-style-small { .recipe--markdown-small; }
