--- a/src/styles/recipes/recipe-markdown.less
+++ b/src/styles/recipes/recipe-markdown.less
@@ -1,5 +1,5 @@
 .recipe--markdown-big {
-	.markdown > * {
+	.item-arkdown > * {
 		margin-top: calc(~'var(--gutter-big) * 0.6');
 		margin-bottom: calc(~'var(--gutter-big) * 0.6');
 		#mq-min-width(@screen-xs, {
