Update options to fit new data model

--- a/src/styles/main.less
+++ b/src/styles/main.less
@@ -4,6 +4,7 @@
 @import "transitions";
 @import "recipes/recipes";
 @import "modules/modules";
+@import "items/items";
 @import "global";
 @import "toolbar";
 @import "guides";
