--- a/src/styles/recipes/recipe-column-count.less
+++ b/src/styles/recipes/recipe-column-count.less
@@ -1,5 +1,5 @@
 .recipe--column-count-2 {
-	.grid-item {
+	.grid > * {
 		width: 100%;
 		#mq-min-width(@screen-xs, {
 			width: 50%;
@@ -8,7 +8,7 @@
 }
 
 .recipe--column-count-3 {
-	.grid-item {
+	.grid > * {
 		width: 100%;
 		#mq-min-width(@screen-xs, {
 			width: 50%;
@@ -20,7 +20,7 @@
 }
 
 .recipe--column-count-4 {
-	.grid-item {
+	.grid > * {
 		width: 100%;
 		#mq-min-width(@screen-xs, {
 			width: 50%;
@@ -32,7 +32,7 @@
 }
 
 .recipe--column-count-5 {
-	.grid-item {
+	.grid > * {
 		width: 100%;
 		#mq-min-width(@screen-xs, {
 			width: 50%;
@@ -47,7 +47,7 @@
 }
 
 .recipe--column-count-6 {
-	.grid-item {
+	.grid > * {
 		width: 100%;
 		#mq-min-width(@screen-xs, {
 			width: 50%;
