--- a/src/styles/recipes/recipe-gutter.less
+++ b/src/styles/recipes/recipe-gutter.less
@@ -11,7 +11,7 @@
 			margin-top: calc(~'var(--gutter-big) * -1');
 		});
 	}
-	.grid > .grid-item {
+	.grid > * {
 		box-sizing: border-box;
 		padding-top: calc(~'var(--gutter-big) * 0.6');
 		#mq-min-width(@screen-xs, {
@@ -34,7 +34,7 @@
 			margin-top: calc(~'var(--gutter-normal) * -1');
 		});
 	}
-	.grid > .grid-item {
+	.grid > * {
 		box-sizing: border-box;
 		padding-top: calc(~'var(--gutter-normal) * 0.6');
 		#mq-min-width(@screen-xs, {
@@ -57,7 +57,7 @@
 			margin-top: calc(~'var(--gutter-small) * -1');
 		});
 	}
-	.grid > .grid-item {
+	.grid > * {
 		box-sizing: border-box;
 		padding-top: calc(~'var(--gutter-small) * 0.6');
 		#mq-min-width(@screen-xs, {
@@ -81,7 +81,7 @@
 			margin-left: calc(~'var(--gutter-big) * -1');
 		});
 	}
-	.grid > .grid-item {
+	.grid > * {
 		box-sizing: border-box;
 		padding-left: calc(~'var(--gutter-big) * 0.6');
 		#mq-min-width(@screen-xs, {
@@ -104,7 +104,7 @@
 			margin-left: calc(~'var(--gutter-normal) * -1');
 		});
 	}
-	.grid > .grid-item {
+	.grid > * {
 		box-sizing: border-box;
 		padding-left: calc(~'var(--gutter-normal) * 0.6');
 		#mq-min-width(@screen-xs, {
@@ -127,7 +127,7 @@
 			margin-left: calc(~'var(--gutter-small) * -1');
 		});
 	}
-	.grid > .grid-item {
+	.grid > * {
 		box-sizing: border-box;
 		padding-left: calc(~'var(--gutter-small) * 0.6');
 		#mq-min-width(@screen-xs, {
