Add Image Input

--- a/src/styles/toolbar.less
+++ b/src/styles/toolbar.less
@@ -3,6 +3,7 @@
 @import "inputDropdown.less";
 @import "inputLine.less";
 @import "inputTextarea.less";
+@import "inputImage.less";
 
 // Toolbar
 .toolbar-zone {
