--- a/src/styles/toolbar.less
+++ b/src/styles/toolbar.less
@@ -244,16 +244,26 @@
 	list-style: none;
 	padding: 0;
 	margin: 0;
+	color: @black;
+	background-color: white;
+	box-sizing: border-box;
+	border-bottom: 1px solid @border;
+	display: flex;
+	.drag-handle {
+		cursor: move;
+		padding: 0 20px;
+		display: flex;
+		align-items: center;
+		flex-shrink: 0;
+	}
 	.toolbar-list-button {
 		.font--title;
 		color: @black;
-		background-color: white;
 		display: block;
-		width: 100%;
+		flex-grow:1;
 		text-align: left;
-		padding: 20px 30px;
+		padding: 20px 30px 20px 0;
 		box-sizing: border-box;
-		border-bottom: 1px solid @border;
 		cursor: pointer;
 	}
 }
